# otus

./: .gitignore  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
.github/workflows/: hw1.yml  hw2.yml  hw3.yml  hw4.yml  hw5.yml  hw6.yml  hw7.yml  hw8.yml  hw9.yml  project.yml  release.yml
hw1/: CMakeLists.txt
hw1/hello_world/lib/src/: lib.cpp
hw1/hello_world/main/src/: main.cpp
hw1/hello_world/test/src/: test_version.cpp
hw1/lib/src/: lib.cpp
hw1/main/src/: main.cpp
hw1/test/src/: gtest_version.cpp  test_version.cpp
hw2/: CMakeLists.txt
hw2/main/src/: ip_filter  ip_filter.cpp
hw2/test/: test
hw2/test/src/: ip_test.cpp
hw3/: CMakeLists.txt
hw3/main/src/: main.cpp
hw3/my_allocator/: allocator.h
hw3/my_container/: my_container.h
hw3/test/src/: test_allocator.cpp  test_container.cpp  test_main.cpp
hw4/: CMakeLists.txt
hw4/main/src/: main.cpp
hw4/my_type_traits/: my_type_traits.h
hw4/print_ip/: print_ip.h
hw4/test/src/: test_main.cpp  test_print_ip.cpp
hw5/: CMakeLists.txt  args
hw5/commands/: command.h  command_add_figure.h  command_create_file.h  command_factory.h  command_save_file.h
hw5/commands/src/: command_add_figure.cpp  command_create_file.cpp  command_factory.cpp  command_save_file.cpp
hw5/figures/: circle.h  figure.h  line.h  point.h
hw5/figures/src/: circle.cpp  line.cpp  point.cpp
hw5/file_keeper/: file.h  file_keeper.h
hw5/file_keeper/src/: file.cpp  file_keeper.cpp
hw5/main/src/: main.cpp
hw5/receiver/: console_receiver.h  receiver.h
hw5/receiver/src/: console_receiver.cpp
hw5/test/src/: test.cpp
hw5/viewer/: console.h  viewer.h
hw5/viewer/src/: console.cpp
hw5/worker/: worker.h
hw5/worker/src/: worker.cpp
hw6/: CMakeLists.txt
hw6/main/src/: main.cpp
hw6/matrix/: matrix.h
hw6/test/src/: test.cpp
hw7/: CMakeLists.txt  test_cmd2
hw7/bulk/: bulk.h  bulk_impl.h
hw7/bulk/src/: bulk.cpp
hw7/main/src/: main.cpp
hw7/manager/: manager.h
hw7/parser/: parser.h
hw7/parser/src/: parser.cpp
hw7/sender/: file_sender.h  sender.h  stdout_sender.h
hw7/sender/src/: file_sender.cpp  stdout_sender..cpp
hw7/types/: types.h
hw7/worker/: worker.h
hw7/worker/src/: worker.cpp
hw8/: CMakeLists.txt
hw8/crc/: crc.h
hw8/crc/src/: crc.cpp
hw8/file/: file.h
hw8/file/src/: file.cpp
hw8/main/src/: main.cpp
hw9/: CMakeLists.txt  test_cmd1  test_cmd2  test_cmd3
hw9/async/: async.h
hw9/async/src/: async.cpp  queue.cpp  queue.h
hw9/bulk/: bulk.h  bulk_impl.h
hw9/bulk/src/: bulk.cpp
hw9/log/: log.h
hw9/main/src/: main.cpp
hw9/manager/: manager.h
hw9/manager/src/: manager.cpp
hw9/parser/: parser.h
hw9/parser/src/: parser.cpp
hw9/sender/: file_sender.h  sender.h  stdout_sender.h
hw9/sender/src/: file_sender.cpp  stdout_sender..cpp
hw9/test/src/: test_data.cpp  test_queue.cpp
hw9/types/: types.h
hw9/worker/: worker.h
hw9/worker/src/: worker.cpp
project/: CMakeLists.txt
project/client/: CMakeLists.txt
project/client/app/: app.h
project/client/app/src/: app.cpp
project/client/client/: network.h  ui.h
project/client/client/src/: network.cpp  ui.cpp
project/client/main/src/: main.cpp
project/cmn/: CMakeLists.txt  main.cpp
project/cmn/cipher_engine/: cipher_engine.h
project/cmn/cipher_engine/src/: cipher_engine.cpp
project/cmn/message/: message.h
project/cmn/message/src/: message.cpp
project/server/: CMakeLists.txt
project/server/client/: client.h
project/server/client/src/: client.cpp
project/server/connection/: connection.h
project/server/connection/src/: connection.cpp
project/server/main/src/: main.cpp
project/server/room/: room.h
project/server/room/src/: room.cpp
